          echoes every possible 40 hex-byte string.

        New Features

        - the 'disapprove' command now accepts a revision range in
          addition to a single revision.

        - New automation command 'log' which behaves identical to the
          normal 'log' command, except that it only outputs the
          revision ids.

        Bugs Fixed

        - monotone no longer asks to pick a branch from a set of branches
          of a revision in which all but one branch have been suspended
          (fixes monotone bug #29843)

        - the 'mv' command now warns when a source is being renamed onto
          itself or one of its children (fixes monotone bug #29484).

        - The annotate command no longer fails if it should print out
          empty or untrusted date cert values
          (fixes monotone bug #30150)

        - monotone now tries harder to find the cancel hint in a commit
          message and only aborts if it can't find it anywhere
          (fixes monotone bug #30215)

        - The import command no longer warns about not being able
          to write out _MTN/options on --dry-run
          (fixes monotone bug #30225)

        - `mtn trusted` will no longer accept single bogus revision ids,
          but instead validates if the given revision really exists in the
          current database.

        Other

Sun Jun 13 22:13:53 UTC 2010

        0.48 release.

        Changes

        - Much more information is now passed to the editor when composing a
          commit message for a new revision. The Author, Date, Branch and
          Changelog values may now all be changed directly in the editor
          allowing new branches to be created without using the --branch option.
          Changes to other lines of this information must not be made or the
          commit will abort.

        - The edit_comment lua hook now only takes one argument which is the